actualizaciones a la vista

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Torneo LOL
+      Torneo de Lol Dominicana
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -14,7 +14,7 @@
   </ion-header>
 
   <div id="container">
-    <ion-img src="assets/icon/lol.png" alt="Logo del Torneo LOL"></ion-img>
+    <ion-img src="assets/icon/lol.png" alt="Logo del Torneo LD"></ion-img>
     <h1>¡Bienvenido al Torneo!</h1>
     <p>Participa en nuestro torneo de League of Lengends</p>
 
