--- a/src/app/inscripcion/inscripcion.page.html
+++ b/src/app/inscripcion/inscripcion.page.html
@@ -13,7 +13,7 @@
     <div class="form-container">
     <ion-card>
       <ion-card-header>
-        <ion-card-title>Inscríbete al Torneo ⚔️</ion-card-title>
+        <ion-card-title>⚔️ Inscríbete al Torneo</ion-card-title>
         <ion-card-subtitle>Completa tus datos de invocador</ion-card-subtitle>
       </ion-card-header>
 
