--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Torneo de Lol Dominicana
+      Bienvenidos a Lol Dominicana
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -15,12 +15,18 @@
 
   <div id="container">
     <ion-img src="assets/icon/lol.png" alt="Logo del Torneo LD"></ion-img>
-    <h1>¡Bienvenido al Torneo!</h1>
+    <h1>¡Bienvenido a Lol Dominicana!</h1>
     <p>Participa en nuestro torneo de League of Lengends</p>
+    <p>Tambien puedes ver las ultimas noticias de eSports</p>
+
+    <ion-button expand="block" routerLink="/inscripcion" color="primary">
+      Ver noticias
+    </ion-button>
 
     <ion-button expand="block" routerLink="/inscripcion" color="primary">
       Inscribirse al Torneo
     </ion-button>
+
   </div>
 
   <div class="ion-text-center" >
