--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -17,7 +17,7 @@
     <ion-img src="assets/icon/lol.png" alt="Logo del Torneo LD"></ion-img>
     <h1>¡Bienvenido a Lol Dominicana!</h1>
     <p>Participa en nuestro torneo de League of Lengends</p>
-    <p>Tambien puedes ver las ultimas noticias de eSports</p>
+    <p>tambien puedes ver las ultimas noticias de eSports</p>
 
     <ion-button expand="block" routerLink="/inscripcion" color="primary">
       Ver noticias
