--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -16,8 +16,9 @@
   <div id="container">
     <ion-img src="assets/icon/lol.png" alt="Logo del Torneo LD"></ion-img>
     <h1>¡Bienvenido a Lol Dominicana!</h1>
-    <p>Participa en nuestro torneo de League of Lengends, tambien puedes ver las ultimas noticias de eSports</p>
-    
+    <p>Participa en nuestro torneo de League of Lengends</p>
+    <p>tambien puedes ver las ultimas noticias de eSports</p>
+
     <ion-button expand="block" routerLink="/inscripcion" color="primary">
       Ver noticias
     </ion-button>
