--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Bienvenidos a Lol Dominicana
+      Lol Dominicana App
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -14,10 +14,9 @@
   </ion-header>
 
   <div id="container">
-    <ion-img src="assets/icon/lol.png" alt="Logo del Torneo LD"></ion-img>
+    <ion-img src="assets/icon/lol.png" alt="Logo de LD"></ion-img>
     <h1>¡Bienvenido a Lol Dominicana!</h1>
-    <p>Participa en nuestro torneo de League of Lengends</p>
-    <p>tambien puedes ver las ultimas noticias de eSports</p>
+    <p>Torneos de League of Legends y las últimas noticias de eSports, todo en un solo lugar.</p>
 
     <ion-button expand="block" routerLink="/inscripcion" color="primary">
       Ver noticias
