--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -101,7 +101,7 @@ ion-button {
     content: "";
     position: absolute;
     inset: 0;
-    background: url("/assets/img/fondo-lol.jpg") center / cover no-repeat;
+    background: url("/assets/img/image.png") center / cover no-repeat;
     opacity: 0.3;
     z-index: 0;
   }
