--- a/src/app/inscripcion/inscripcion.page.scss
+++ b/src/app/inscripcion/inscripcion.page.scss
@@ -21,7 +21,7 @@
 .form-page-bg .bg-image {
   position: absolute;
   inset: 0;
-  background-image: url("/assets/img/fondo-lol.png");
+  background-image: url("/assets/img/image.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
